--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-alembic
+alembic~=1.12.0
 asyncpg
-fastapi[all]
+fastapi[all]~=0.103.1
 fastapi-users[sqlalchemy]
-python-dotenv
-sqlalchemy
+python-dotenv~=1.0.0
+sqlalchemy~=2.0.20
+uvicorn~=0.23.2
+pydantic~=2.3.0
