--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,13 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
 
+  redis:
+    image: redis:latest  # Мы используем последнюю версию Redis
+    container_name: REDIS
+    restart: always
+    ports:
+      - '6379:6379'  # Redis обычно слушает порт 6379
+
 #  test_db:
 #    image: postgres:14
 #    container_name: TEST_DB
