--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,22 +13,22 @@ services:
       - postgres_data:/var/lib/postgresql/data/
 
   redis:
-    image: redis:latest  # Мы используем последнюю версию Redis
+    image: redis:latest
     container_name: REDIS
     restart: always
     ports:
       - '6379:6379'  # Redis обычно слушает порт 6379
 
-#  test_db:
-#    image: postgres:14
-#    container_name: TEST_DB
-#    restart: always
-#    environment:
-#      - POSTGRES_USER=test
-#      - POSTGRES_PASSWORD=test
-#      - POSTGRES_DB=test
-#    ports:
-#      - '5452:5432'
+  test_db:
+    image: postgres:14
+    container_name: TEST_DB
+    restart: always
+    environment:
+      - POSTGRES_USER=test
+      - POSTGRES_PASSWORD=test
+      - POSTGRES_DB=test
+    ports:
+      - '5452:5432'
 
 volumes:
   postgres_data:
